@@ -23,8 +23,14 @@ import io.micronaut.context.annotation.Requires;
 
 import io.micronaut.core.annotation.NonNull;
 import jakarta.inject.Singleton;
+import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Valid;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.util.Collection;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
@@ -34,23 +40,59 @@ import java.util.stream.Collectors;
  */
 @Primary
 @Singleton
-@Requires(
-    beans = NewRelicInsightsClient.class
-)
+@Requires(beans = NewRelicInsightsClient.class)
 @Replaces(FallbackNewRelicInsightsService.class)
 public class DefaultNewRelicInsightsService implements NewRelicInsightsService {
 
+    private static final Logger LOGGER = LoggerFactory.getLogger(DefaultNewRelicInsightsService.class);
+
+    private final NewRelicInsightsClient criticalClient;
     private final NewRelicInsightsClient client;
     private final EventPayloadExtractor extractor;
+    private final NewRelicConfiguration configuration;
 
-    public DefaultNewRelicInsightsService(NewRelicInsightsClient client, EventPayloadExtractor extractor) {
+    public DefaultNewRelicInsightsService(
+        NewRelicInsightsClient criticalClient,
+        NewRelicInsightsClient client,
+        EventPayloadExtractor extractor,
+        NewRelicConfiguration configuration
+    ) {
+        this.criticalClient = criticalClient;
         this.client = client;
         this.extractor = extractor;
+        this.configuration = configuration;
+    }
+
+    public <E> void createEvents(@Valid @NonNull Collection<E> events) {
+        try {
+            unsafeCreateEvents(events);
+        } catch (ConstraintViolationException cve) {
+            // keep the validation exceptions
+            throw cve;
+        } catch (Exception ex) {
+            LoggerFactory.getLogger(getClass()).error("Exception creating New Relic events " + ex);
+        }
     }
 
     @Override
     public <E> void unsafeCreateEvents(@NonNull @Valid Collection<E> events) {
-        this.client.createEvents(events.stream().map(extractor::extractPayload).collect(Collectors.toList()));
+        List<Map<String, Object>> criticalEvents = events.stream()
+            .map(extractor::extractPayload)
+            .filter(EventPayloadExtractor::isCritical)
+            .toList();
+
+        List<Map<String, Object>> nonCriticalEvents = events.stream()
+            .map(extractor::extractPayload)
+            .filter(EventPayloadExtractor::isNonCritical)
+            .toList();
+
+        if (!criticalEvents.isEmpty()) {
+            this.criticalClient.createEvents(criticalEvents);
+        }
+
+        if (!nonCriticalEvents.isEmpty()) {
+            this.client.createEvents(nonCriticalEvents);
+        }
     }
 
 }
